<resources>
    <string name="app_name">UMC_study01</string>
    <string name="textview">TextView</string>
    <string name="text_view_1">Text View 1</string>
    <string name="text_view_2">Text View 2</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="c1">C1</string>
    <string name="b1">B1</string>
    <string name="t1">T1</string>
    <string name="t2">T2</string>
    <string name="_0_0">(0,0)</string>
    <string name="_0_1">(0,1)</string>
    <string name="_0_2">(0,2)</string>
    <string name="_0_3">(0,3)</string>
    <string name="_1_0">(1,0)</string>
    <string name="_1_1">(1,1)</string>
    <string name="_1_2">(1,2)</string>
    <string name="_1_3">(1,3)</string>
</resources>