<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/c1"
        android:textSize="50sp"
        android:background="#ff9966"
        android:gravity="center"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/button17"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/b1"
        android:textSize="50sp"
        android:background="#ff0000"
        android:gravity="center"
        android:layout_below="@+id/checkBox"
        android:layout_toEndOf="@+id/checkBox"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/t1"
        android:textSize="50sp"
        android:background="#66ffcc"
        android:gravity="center"
        android:layout_below="@+id/button17"
        android:layout_toStartOf="@+id/button17"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/t2"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:background="#cc00ff"
        android:gravity="center"
        android:layout_below="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        />

</RelativeLayout>